# Password_Manager

./: CMakeLists.txt  README.md  addnewnote.cpp  addnewnote.h  addnewnote.ui  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  unit_of_data.cpp  unit_of_data.h  widget.cpp  widget.h  widget.ui
